# wbittorrent

./: .clang-format  CMakeLists.txt  README.md  TODO.md
.github/workflows/: build.yml
cli/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  Main.cpp  bencode.cpp  bencode.hpp  error.cpp  error.hpp  message.cpp  message.hpp  peer.cpp  peer.hpp  torrent.cpp  torrent.hpp  tracker_info.cpp  tracker_info.hpp
src/lib/: sha1.hpp  utils.cpp  utils.hpp
tests/: CMakeLists.txt  bencode_decode_test.cpp  bencode_encode_test.cpp  bencode_test.cpp
tests/cli/: discover_peers.sh  torrent_info.sh
